헤더 콘텐츠 마크업 완성

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <div class="header-container">
-    <header class="header-"></header>
+    <header class="header-">
+      <h1 class="brand"><a href="#">현대카드 웨더</a></h1>
+      <nav class="navigation">
+        <h2 class="a11y-hidden">메인 메뉴</h2>
+        <ul class="gnb">
+          <li><a href="#">주요 서비스 소개</a></li>
+          <li><a href="#">앱설치</a></li>
+        </ul>
+      </nav>
+      </header>
   </div>
   <div class="main-container">
     <main class="main">메인 콘텐츠</main>
