기본구조 생성 및 블록과 인라인 요소 구분

--- a/block-inline.html
+++ b/block-inline.html
@@ -7,7 +7,7 @@
   <title>블록과 인라인 박스의 차이</title>
   <style>
   h1{background-color: yellow}
-  span{background-color: violet}
+  span{background-color: pink}
   </style>
 </head>
 <body>
