stylesheet.css 파일 연결

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:image:height" content="200">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="image_src" href="http://mud-kage.kakao.co.kr/14/dn/btqb3Lxep9j/YEuqn1bxfGpBfxTjSM93K1/o.jpg">    
+    <link rel="stylesheet" href="css/stylesheet.css">
   </head>
   
   <body>
